--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,73 @@
+/* One For All */
+* {
+    box-sizing: border-box;
+}
+/* Page */
+body {
+    background-color: rgb(223, 223, 223);
+    font-size: 16px;
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 50px;
+}
+
+/* Header */
+.main-header {
+    padding-top: 1.5em;
+}
+.main-nav {
+    margin-top: 1.5em;
+}
+.wrapper {
+    display: block;
+    color: black;
+    font-size: 1.125em;
+    font-weight: 300;
+    text-align: center;
+    padding: .4em;
+}
+
+.navbar,
+.main-header {
+    display: flex;
+    flex-direction: column;
+}
+.navbar a {
+    background-color: white;
+
+}
+ul li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+a {
+    color: black;
+    text-decoration: none;
+    font-weight: 100;
+}
+.profile-picture {
+
+}
+.portfolio-bio {
+    float: left;
+}
+/* Main */
+.portfolio-title {
+    text-align: center;
+}
+.skills {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.contact {
+    text-align: center;
+}
+/* Footer */
+
 /* Mobile First */
-@media (min-widht: 768px) {
+@media (min-width: 768px) {
     
 }
