--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@
 body {
     background-color: rgb(223, 223, 223);
     font-size: 16px;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+    margin: 0 auto;
+    font-family: 'Red Rose''Courier New', Courier, monospace;
     line-height: 50px;
 }
 
@@ -17,18 +17,16 @@ body {
 }
 .main-nav {
     margin-top: 1.5em;
-}
-.home {
-    padding: 10px 100px 10px 100px;
+    font-weight: 800;
+    text-transform: uppercase;
 }
 
 .wrapper {
     display: block;
     color: black;
     font-size: 1.125em;
-    font-weight: 300;
     text-align: center;
-    padding: .4em;
+    /* padding: .4em; */
 }
 
 .navbar,
@@ -36,24 +34,29 @@ body {
     display: flex;
     flex-direction: column;
 }
-ul li {
-    margin: 0;
+ul {
     padding: 0;
+    width: 100%;
+}
+ul li {
     list-style-type: none;
+    
 }
 a {
     color: black;
     text-decoration: none;
-    font-weight: 100;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
 }
-/* a:link {
+
+.main-nav a:link {
     background-color: white;
-    position: relative;
-} */
+    outline: none;
+    width: 50%;
+    margin: 0.625%;
+}
 .portfolio-container {
-    position: relative;
+    /* position: relative; */
     text-align: center;
 }
 .portfolio-bio {
@@ -75,7 +78,7 @@ p {
     display: inline-block;
     margin: 20px;
     background-color: rgb(255, 255, 255);
-    width: 100%;/* spans the background across the entire page*/
+    /* spans the background across the entire page */
     place-items: center;
 }
 .skills {
@@ -106,27 +109,70 @@ hr {
     color: gray;
 }
 /* Footer */
+hr {
+    margin: 20px;
+}
 .main-footer {
     margin: 20px;
 }
 .footer-nav {
     position: relative;
     overflow: hidden;
+    float: left;
 }
 .footer-nav li {
     list-style-type: none;
 }
-.footer-nav .hidden {
-    display: none;
-}
+
 .mobile-footer {
     float: left;
+    font-weight: 800;
 }
 .mobile-footer-too {
     float: right;
+    font-weight: 800;
 }
 /* Mobile First */
+@media (max-width: 767px) {
+    .footer-nav .hidden {
+        display: none;
+    }
+}
+
 @media (min-width: 768px) {
+    .main-nav a:link {
+        background-color: transparent;
+    }
+    .portfolio-container {
+        /* display: flex; */
+        align-items: center;
+    }
+    .portfolio-bio {
+        float: left;
+    }
+    .profile-picture {
+        float: right;
+    }
+    
+    .skills-container {
+        margin: auto 0;
+    }
+    .main-nav li {
+        display: inline-block;
+        width: 20%;
+    }
+    .footer-nav {
+        float: left;
+    }
+    .footer-nav .hidden {
+        font-weight: 800;
+        width: 25%;
+        text-transform: uppercase;
+        float: right;
+    }
+    .mobile-footer-too {
+        display: none;
+    }
     
 }
 @media (min-width: 1024px) {
