--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,34 @@
-/* One For All */
+ /* One For All */
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 /* Page */
 body {
     background-color: rgb(223, 223, 223);
     font-size: 16px;
-    margin: 0 auto;
+    margin: 0;
     font-family: 'Red Rose''Courier New', Courier, monospace;
     line-height: 50px;
+    place-items: center;
+}
+main {
+    display: grid;
+    place-items: center;
 }
 
-/* Header */
-.main-header {
-    padding-top: 1.5em;
+p {
+    line-height: 30px;
+    margin: 30px;
+    text-align: center;
 }
+/* Header */
 .main-nav {
-    margin-top: 1.5em;
+    /* margin-top: 1.5em; */
     font-weight: 800;
     text-transform: uppercase;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -26,91 +36,84 @@ body {
     color: black;
     font-size: 1.125em;
     text-align: center;
-    /* padding: .4em; */
 }
-
-.navbar,
+.navbar li {
+    background-color: white;
+    margin: 30px;
+    line-height: 20px;
+    padding: 10px;
+}
 .main-header {
     display: flex;
     flex-direction: column;
 }
+
 ul {
-    padding: 0;
-    width: 100%;
-}
-ul li {
     list-style-type: none;
-    
+    padding-inline-start: 0px;
 }
 a {
     color: black;
     text-decoration: none;
-    /* padding-top: 10px;
-    padding-bottom: 10px; */
 }
 
-.main-nav a:link {
-    background-color: white;
-    outline: none;
-    width: 50%;
-    margin: 0.625%;
-}
 .portfolio-container {
-    /* position: relative; */
+    position: relative;
     text-align: center;
 }
+.profile-picture{
+    align-content: center;
+}
 .portfolio-bio {
-    float: left;
+    text-align: center;
 }
 /* Main */
-main {
-    display: grid;
-    place-items: center;
-}
-p {
-    line-height: 20px;
-    margin: 30px;
-}
 .portfolio-title {
     text-align: center;
 }
 .skills-container {
-    display: inline-block;
-    margin: 20px;
+    align-content: center;
+    /* display: inline-block; */
+    /* margin: 25px; */
     background-color: rgb(255, 255, 255);
+    /* width: 100%; */
     /* spans the background across the entire page */
     place-items: center;
 }
 .skills {
-    width: 100%;
+    /* background-color: white; */
     justify-content: space-between;
     vertical-align: middle;
 }
+.skills-wrapper {
+    /* display: inline-block; */
+    /* margin: 0 0 0 20px; */
+    /* overflow: auto;   */
+}
 .main-img {
-    max-width: auto;
+    /* max-width: auto; */
     max-height: 100%;
-    display: block;
-    margin: 0 auto;
+    /* display: block; */
 }
 .frame {
-    width: 250px;
-    height: 250px;
-    vertical-align: middle;
+    /* width: 30%; */
+    height: 200px;
+    /* vertical-align: middle; */
     text-align: center;
     display: table-cell;
     position: relative;
+    /* overflow: auto; */
 }
 .contact {
     text-align: center;
     margin: 30px;
     line-height: 20px;
 }
-hr {
-    color: gray;
-}
+
 /* Footer */
 hr {
     margin: 20px;
+    color: lightgray;
 }
 .main-footer {
     margin: 20px;
@@ -118,7 +121,7 @@ hr {
 .footer-nav {
     position: relative;
     overflow: hidden;
-    float: left;
+    /* float: left; */
 }
 .footer-nav li {
     list-style-type: none;
@@ -132,6 +135,12 @@ hr {
     float: right;
     font-weight: 800;
 }
+/* Float Clearfix */
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 /* Mobile First */
 @media (max-width: 767px) {
     .footer-nav .hidden {
@@ -143,31 +152,53 @@ hr {
     .main-nav a:link {
         background-color: transparent;
     }
+    .navbar li {
+        background-color: transparent;
+    }
     .portfolio-container {
-        /* display: flex; */
-        align-items: center;
+        /* display: inline-block;    */
     }
     .portfolio-bio {
         float: left;
+        text-align: left;
+        /* margin: auto; */
     }
     .profile-picture {
         float: right;
+        vertical-align: middle;
+        overflow: auto;
     }
     
     .skills-container {
         margin: auto 0;
+        /* display: inline-block; */
     }
     .main-nav li {
         display: inline-block;
         width: 20%;
     }
-    .footer-nav {
+    .marketing {
         float: left;
+    }
+    .search {
+        float: right;
+    }
+    .travel {
+        float: left;
+    }
+    .map {
+        float: right;
+    }
+    .footer-nav li {
+        display: inline-block;
+        margin: 15px;
     }
     .footer-nav .hidden {
         font-weight: 800;
-        width: 25%;
+        /* width: 25%; */
         text-transform: uppercase;
+    }
+    .responsive-footer {
         float: right;
     }
     .mobile-footer-too {
@@ -176,5 +207,15 @@ hr {
     
 }
 @media (min-width: 1024px) {
-    
+    .wrapper {
+        position: relative;
+        overflow: hidden;
+    }
+    .name {
+        float: left;
+        margin: 40px;
+    }
+    .navbar {
+        float: right;
+    }
 }
