--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 body {
     background-color: rgb(223, 223, 223);
     font-size: 16px;
-    margin: 0;
+    margin: 0px;
     font-family: "Red Rose", "Courier New", Courier, monospace;
     line-height: 50px;
     place-items: center;
@@ -17,30 +17,39 @@ main {
     display: grid;
     place-items: center;
 }
+.name {
+    color: white;
+}
 p {
     line-height: 25px;
-    margin: 10px;
+    margin: 15px;
     text-align: center;
+}
+img {
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
 }
 /* Header */
 .main-nav {
-    /* margin-top: 1.5em; */
     font-weight: 800;
     text-transform: uppercase;
     overflow: hidden;
 }
 
 .wrapper {
-    /* display: block; */
     color: black;
     font-size: 1.125em;
     text-align: center;
+    background-color: rgb(0, 0, 0);
+    padding: 15px;
 }
 .navbar li {
     background-color: white;
-    margin: 30px;
+    margin: 10px;
     line-height: 20px;
     padding: 10px;
+    border-radius: 30px;
 }
 .main-header {
     display: flex;
@@ -56,8 +65,8 @@ a {
 }
 
 .portfolio-container {
-    /* position: relative; */
     text-align: center;
+    margin: 20px;
 }
 .profile-picture{
     align-content: center;
@@ -71,36 +80,17 @@ a {
 }
 .skills-container {
     align-content: center;
-    /* display: inline-block; */
-    /* margin: 25px; */
     background-color: rgb(255, 255, 255);
-    /* width: 100%; */
-    /* spans the background across the entire page */
     place-items: center;
 }
 .skills {
-    /* background-color: white; */
     justify-content: space-between;
     vertical-align: middle;
 }
-.skills-wrapper {
-    /* display: inline-block; */
-    /* margin: 0 0 0 20px; */
-    /* overflow: auto;   */
-}
-.main-img {
-    max-width: auto;
-    max-height: 100%;
-    /* display: block; */
-}
 .frame {
-    /* width: 0 auto; */
-    height: 200px;
-    /* vertical-align: middle; */
     text-align: center;
     display: table-cell;
-    /* position: relative; */
-    /* overflow: auto; */
+    position: relative;
 }
 .contact {
     text-align: center;
@@ -115,10 +105,6 @@ hr {
 }
 .main-footer {
     margin: 20px;
-}
-.footer-nav {
-    /* position: relative; */
-    /* overflow: hidden; */
 }
 .footer-nav li {
     list-style-type: none;
@@ -135,25 +121,32 @@ hr {
 
 /* Mobile First */
 @media (max-width: 767px) {
-    .footer-nav .hidden {
+    .footer-nav .hidden-footer {
         display: none;
     }
 }
 
 @media (min-width: 768px) {
-    .main-nav a:link {
-        background-color: transparent;
+    p {
+        line-height: 30px;
+    }
+    
+    .home,
+    .portfolio,
+    .contact-section {
+        color: white;
     }
     .navbar li {
-        background-color: transparent;
+        margin: 30px;
     }
     .portfolio-container {
-        /* display: inline-block;    */
+        float: left;
+        padding: 20px;
     }
     .portfolio-bio {
-        float: left;
         text-align: left;
-        /* margin: auto; */
+        margin: auto;
+        padding: 20px;
     }
     .profile-picture {
         float: right;
@@ -163,33 +156,44 @@ hr {
     .frame {
         float: left;
     }
+    .main-img{
+        width: 95%;
+    }
     .marketing,
-    .search
+    .search,
     .travel,
     .map,
     .gallery,
     .calc {
         width: 50%;
+        /* max-height: 100%; */
     }
     .main-nav li {
         display: inline-block;
         width: 20%;
+        
     }
     .skills-container {
         margin: auto 0;
     }
+  
+    .footer-nav .mobile-footer {
+        float: left;
+    }
     .footer-nav li {
-        display: inline-block;
+        float: right;
         margin: 15px;
     }
-    .footer-nav .hidden {
-        font-weight: 800;
-        /* width: 25%; */
-        text-transform: uppercase;
+    /* .footer-nav li {
+        margin: 15px;
         float: right;
+    } */
+    .contact-section {
+        padding: 80px;
     }
-    .responsive-footer {
-        /* float: right; */
+    .hidden-footer {
+        font-weight: 800;
+        text-transform: uppercase;
     }
     .mobile-footer-too {
         display: none;
@@ -204,15 +208,18 @@ hr {
 }
 @media (min-width: 1024px) {
     .wrapper {
-        position: relative;
-        overflow: hidden;
+        /* position: relative;
+        overflow: hidden; */
     }
     .name {
         float: left;
         margin: 40px;
     }
-    .navbar {
-        float: right;
+    .main-nav {
+        margin-top: 15px;
+    }
+    .main-nav li {
+        display: inline-block;
     }
     .marketing,
     .search,
@@ -221,5 +228,11 @@ hr {
     .gallery,
     .calc {
         width: 33.33%;
+    }
+    .main-img {
+        width: 95%;
+    }
+    .skills-wrapper {
+        margin: 5px;
     }
 }
